# datacite-to-opendataswiss

./: .gitignore  LICENSE  pyproject.toml
app/: __init__.py  main.py  parser.py
app/mappings/datacite-to-dcat-ap-ch/: datacite-v4d6-to-dcat-ap-ch-v2-mandatory.json  schema_datacite-v4d6-to-dcat-ap-ch-v2-all.json  schema_datacite-v4d6-to-dcat-ap-ch-v2-mandatory.json
app/routers/: __init__.py  converters.py
config/: config-dcat-ap-ch-v2-all-to-datacite-v4d6.json  dcat-ap-ch-v2-mandatory-to-datacite-v4d6.json
mappings/: schema_writer.py
mappings/datacite-to-dcat-ap-ch/: datacite-v4d6-to-dcat-ap-ch-v2-all.json  mapping-datacite-v4d6-to-dcat-ap-ch-v2-all.json  mapping-datacite-v4d6-to-dcat-ap-ch-v2-mandatory.json
mappings/dcat-ap-ch-to-datacite/: mapping-dcat-ap-ch-v2-all-to-datacite-v4d6.json  schema_mapping-dcat-ap-ch-v2-mandatory-to-datacite-v4d6.json
src/: converter.py  main.py  parser.py
src/datacite-to-opendataswiss/: parser.py
src/datacite-to-opendataswiss/mappings/: schema_writer.py
src/datacite-to-opendataswiss/mappings/dcat-ap-ch-to-datacite/: schema_dcat-ap-ch-v2-mandatory-to-datacite-v4d6.json
