[project]
name = "datacite-to-opendataswiss"
version = "0.1.0"
description = "Converts metadata in DataCite XML format to opendata.swiss XML format."
authors = [
    {name = "Rebecca Kurup Buchholz"},
]
maintainers = [
    {name = "EnviDat", email="envidat@wsl.ch"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "genson>=1.3.0",
]
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/eawag-rdm/datacite-to-opendataswiss"
