[project]
name = "datacite-to-opendataswiss"
version = "0.1.0"
description = "API that converts metadata in DataCite XML format to opendata.swiss XML format."
authors = [
    {name = "Rebecca Kurup Buchholz"},
]
maintainers = [
    {name = "EnviDat", email="envidat@wsl.ch"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "genson>=1.3.0",
]
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/eawag-rdm/datacite-to-opendataswiss"

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]
